--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "a2_1801040200",
-  "version": "1.0.0",
-  "description": "\"Assignment 2\"",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Dao Anh Thanh",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongodb": "^4.1.4",
-    "nodemon": "^2.0.14"
-  }
+    "name": "a2_1801040200",
+    "version": "1.0.0",
+    "description": "\"Assignment 2\"",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Dao Anh Thanh",
+    "license": "ISC",
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "fs": "^0.0.1-security",
+        "mongodb": "^4.1.4",
+        "nodemon": "^2.0.14"
+    }
 }
